# AI-Nakamura

./: .gitignore  CGAN_sample.ipynb  README.md  agent.py  main.py  main1.py  main2.py  model.py  pyproject.toml  record.py  train.py  utils.py
CGAN_models/: loss_history.csv
models/g0.95_lr0.0005_h128-64_b32_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h128-64_b32_m200000_s0/: policy_net.pt
models/g0.95_lr0.0005_h128-64_b64_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h128-64_b64_m200000_s0/: policy_net.pt
models/g0.95_lr0.0005_h32-32_b32_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h32-32_b32_m200000_s0/: policy_net.pt
models/g0.95_lr0.0005_h32-32_b64_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h32-32_b64_m200000_s0/: policy_net.pt
models/g0.95_lr0.0005_h64-64_b32_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h64-64_b32_m200000_s0/: policy_net.pt
models/g0.95_lr0.0005_h64-64_b64_m100000_s0/: policy_net.pt
models/g0.95_lr0.0005_h64-64_b64_m200000_s0/: policy_net.pt
models/g0.95_lr0.001_h128-64_b32_m100000_s0/: policy_net.pt
models/g0.95_lr0.001_h128-64_b32_m200000_s0/: policy_net.pt
models/g0.95_lr0.001_h128-64_b64_m100000_s0/: policy_net.pt
models/g0.95_lr0.001_h128-64_b64_m200000_s0/: policy_net.pt
models/g0.95_lr0.001_h32-32_b32_m100000_s0/: policy_net.pt
models/g0.95_lr0.001_h32-32_b32_m200000_s0/: policy_net.pt
models/g0.95_lr0.001_h32-32_b64_m100000_s0/: policy_net.pt
models/g0.95_lr0.001_h32-32_b64_m200000_s0/: policy_net.pt
report/: SPECIfICATION.md
results/: evaluation_results.csv
(+28 files in other folders)
