[project]
name = "ai-nakamura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clip",
    "ftfy>=6.3.1",
    "regex>=2024.11.6",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "ipykernel (>=6.29.5,<7.0.0)",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
